Sinkronisasi LaporanUsahaPage ke API dan perbaikan format tanggal

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   firebase_core: ^4.4.0
   firebase_analytics: ^12.1.1
   googleapis: ^13.0.0
+  http: ^1.2.0
   extension_google_sign_in_as_googleapis_auth: ^2.0.12
   flutter_localizations:
     sdk: flutter
